# OpenGLBasic

./: .gitignore  build.gradle  local.properties  settings.gradle
app/: build.gradle  local.properties
app/src/androidTest/java/com/example/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-opengl.cpp
app/src/main/cpp/egl/: EglHelper.cpp  EglHelper.h
app/src/main/cpp/log/: AndroidLog.h
app/src/main/java/com/example/demo/: MainActivity.kt
app/src/main/java/com/example/demo/base/: CameraBaseActivity.java  CameraManger.java
app/src/main/java/com/example/demo/base/egl/: BaseGLThread.java  EGLHelper.java  Event.java  GLCallback.java  GLSurface.java  IGLRender.java  IReadBitmapCallback.java  Shaders.kt  SimpleTextureEGLHelper.java  SimpleTrianglesEGLHelper.java  (+1 more)
app/src/main/java/com/example/demo/basic/: BasicListActivity.kt  GLUtils.java  SimpleSurfaceViewCallback.java
app/src/main/java/com/example/demo/opengl/: OpenGLActivity.kt
app/src/main/java/com/example/jni/: JNITest.java  NativeOpengl.java
app/src/main/res/layout/: activity_basic_list.xml  activity_camera_glsurface_view.xml  activity_fbo1.xml  activity_fbo3.xml  activity_fbocamera_preview.xml  activity_glsurface_view.xml  activity_main.xml  activity_open_glactivity.xml  activity_shape_draw.xml  activity_texture.xml
app/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+20 files in other folders)
